use image from repository

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   api01: &api
-    build: .
-    # image: cairocampos98/rinha-backend-2024-q1:latest
+    # build: .
+    image: cairocampos98/rinha-backend-2024-q1:latest
     hostname: api01
     environment:
       - PORT=3000
@@ -9,8 +9,6 @@ services:
       - "3000:3000"
     depends_on:
       - db
-      # db:
-      #   condition: service_healthy
     deploy:
       resources:
         limits:
@@ -50,8 +48,6 @@ services:
      - 5432:5432
     volumes:
       - ./config/init.sql:/docker-entrypoint-initdb.d/init.sql
-    #   - ./docker/db.conf:/docker-entrypoint-initdb.d/postgresql.conf
-    # command: postgres -c config_file=/docker-entrypoint-initdb.d/postgresql.conf
     deploy:
       resources:
         limits:
@@ -63,13 +59,6 @@ services:
       timeout: 5s
       retries: 20
       start_period: 10s
-      
-    # healthcheck:
-    #   test: ["CMD-SHELL", "sh -c 'pg_isready -U docker -d rinha'"]
-    #   interval: 5s
-    #   timeout: 5s
-    #   retries: 20
-    #   start_period: 10s
 
 networks:
   default:
